watchdog (5.10-1) unstable; urgency=low

  * New upstream version.
  * Updated Danish debconf translation. (Closes: #650855)
  * Bumped Standards-Version to 3.9.2 no changes needed.

 -- Michael Meskes <meskes@debian.org>  Thu, 15 Dec 2011 17:36:21 +0100

watchdog (5.9-1) unstable; urgency=low

  * New upstream version.
  * Fixed check for existance of MAKEDEV. (Closes: #582766) - thanks to Timo
    Juhani Lindfors <timo.lindfors@iki.fi>
  * Added source/format file.

 -- Michael Meskes <meskes@debian.org>  Thu, 17 Jun 2010 17:01:41 +0200

watchdog (5.8-1) unstable; urgency=low

  * New upstream version.
  * Bumped Standards-Version to 3.8.4 no changes needed.

 -- Michael Meskes <meskes@debian.org>  Mon, 22 Mar 2010 15:29:46 +0100

watchdog (5.7-4) unstable; urgency=low

  * Decreased default interval from 10 seconds to just 1.
  * Disable OOM killer for watchdog and wd_keepalive. In the process also make
    sure that the daemons do not allocate memory once they are in daemon mode
    as a safeguard for systems running out of memory.
  * Fixed typo in init script.

 -- Michael Meskes <meskes@debian.org>  Thu, 11 Feb 2010 15:10:49 +0100

watchdog (5.7-3) unstable; urgency=low

  * Missed one line of Min Zhangg's patch resulting in an incorrect path when
    using log_dir option.

 -- Michael Meskes <meskes@debian.org>  Wed, 13 Jan 2010 09:59:49 +0100

watchdog (5.7-2) unstable; urgency=low

  * Applied patch by Min Zhang <mzhang@mvista.com> to make logdir a
    configurable option.
  * Fixed init scripts to make sure one daemon really has ended before
    the next one is started. (Closes: #554793) - thanks to Tim Small
    <tim@seoss.co.uk>

 -- Michael Meskes <meskes@debian.org>  Sat, 09 Jan 2010 16:32:20 +0100

watchdog (5.7-1) unstable; urgency=low

  * New upstream version including all the changes from the Debian package and
    - Patch by Russell Coker <russell@coker.com.au> to set the socket