@@ -9,11 +9,14 @@ Homepage: http://watchdog.sourceforge.net
 Package: watchdog
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, makedev (>= 2.3.1-24) | udev, lsb-base (>= 3.2-14)
-Description: A software watchdog
+Description: watchdog is a system health checker that also trigger kernel watchdogs
  The watchdog program writes to /dev/watchdog every ten seconds.  If
  the device is opened but not written to within a minute, the machine
  will reboot. This feature is available when the kernel is built with
  'software watchdog' support (standard in Debian kernels).
  .
  The ability to reboot will depend on the state of the machine
- and interrupts.
+ and interrupts if the kernel software watchdog is used.
+ .
+ The watchdog tool itself runs several health checks and acts accordingly if
+ the system is not in a good shape.
